Fixed bug #36392 (wrong number of decimal digits with %e specifier in sprintf).